Fix contrast

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    background-color:#BBB;
+    background-color:#DDD;
 }
 
 #main {
